syntax = "proto3";

package peers;

option go_package = "/peers/peerpb";

service access_cache {
    rpc GetCache(getReq) returns(getResp);
}

message getReq {
    string group = 1;
    string key = 2;
}

message getResp {
    bytes value = 1;
}